# supramol_explorer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: ci.yml
data_plan/: index.html
database/: index.html
docs/: data_plan.md  database.md  index.md
search/: search_index.json
src/PROJECT_NAME/: __init__.py
src/supramol_explorer/: __init__.py  __main__.py
src/supramol_explorer/db_model/: db_write.py  model.py
src/supramol_explorer/utils/: dbschema.py  settings.py
tests/data/: example_database.py
