[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name            = "supramol_explorer"
description     = "Explorer of supramolecular architectures"
version         = "0.0.1"
requires-python = ">=3.12"

authors = [
    { name = "Filip T. Szczypiński", email = "fiszczyp@gmail.com" },
]

dependencies = [
    "sqlalchemy>=2.0",
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
]

    [project.urls]
    Repository = "https://github.com/fiszczyp/supramol_explorer"

    [project.optional-dependencies]
    dev = [
        "interrogate",
        "ipython",
        "nox",
        "pre-commit",
        "pytest",
        "pytest-cov",
        "ruff",
    ]

[tool.setuptools]
include-package-data = true

    [tool.setuptools.packages.find]
    where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.mplstyle"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.interrogate]
verbose                    = 2
ignore-setters             = true
ignore-property-decorators = true
ignore-magic               = true

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.ruff]
line-length = 79
target-version = "py311"
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

    [tool.ruff.lint.pydocstyle]
    convention = "google" # or numpy
